--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "name": "hyke",
+  "name": "hyke-ui",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
+    "@material-ui/core": "^4.6.1",
+    "apollo-boost": "^0.4.4",
+    "axios": "^0.19.0",
+    "graphql": "^14.5.8",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-map-gl": "^5.1.2",
     "react-scripts": "3.2.0"
   },
   "scripts": {
